--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,39 @@ body {
     padding: 0;
 }
 
+@font-face {
+    font-family: "Oswald";
+    src: url("fonts/Oswald-VariableFont_wght.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 200 500;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Open Sans";
+    src: url("fonts/OpenSans-VariableFont_wdth\,wght.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 200 500;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Work Sans";
+    src: url("fonts/WorkSans-VariableFont_wght.ttf") format("truetype");
+    front-style: normal;
+    font-weight: 200 500;
+    font-display: swap;;
+}
+
+body {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+}
+
+h1, h2, h3 {
+    color: #500000
+}
+
 .site-header {
     background-color: white;
 }
@@ -16,8 +49,8 @@ body {
     width: 100vw; /*100% of wiewport*/
     margin: 0;
     padding: 0;
+    margin-bottom: 6px;
 
-    border: 2px solid blue
 }
 
 .nav-left, .banner, .nav-right {
@@ -52,11 +85,27 @@ body {
     width: 100%;
     height: 100%;
 
+    font-size: 1rem;
+
     color: black;
     text-decoration: none;
 
-    border: 2px solid purple;
+    /*Makes the bow-shadow on hover appear a bit more slowly with a transition*/
+    transition: box-shadow 0.1s ease-in-out;
+    box-shadow: inset 0 0 0 0 transparent;
 }
+
+.nav-left li a:hover, .nav-right li a:hover {
+    box-shadow: inset 0 -4px 0 0 #500000;
+}
+
+
+@media (max-width: 1000px) {
+    .nav-left li a, .nav-right li a {
+        font-size: 0.75rem;
+    }
+}
+
 
 
 .banner {
@@ -64,18 +113,30 @@ body {
     justify-content: center;
     height: 100%;
     padding: 0 2rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 700;
 
     text-align: center;
     text-decoration: none;
     color: black;
+
+    font-family: "Oswald";
+    font-weight: 200;
 }
 
 /*Hide the button by default */
 .nav-toggle {
     position: relative;
     z-index: 1000; /*Place the button above all else*/
+    margin-left: 1rem;
+    background-color: #500000;
+    border: 1px solid black;
+
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: white;
+
+    cursor: pointer;
 }
 
 .mobile-header {
@@ -86,8 +147,30 @@ body {
     width: 100vw; /*100% of wiewport*/
     margin: 0;
     padding: 0;
+}
 
-    border: 2px solid blue
+/*Overlay for darkening the rest of the screen when mobile side bar is open*/
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: grey;
+    z-index: 10;
+
+    /*Makes it so that the overlay is present, but pointer-events makes it so that the overlay has no effect on clicking*/
+    display: block;
+    pointer-events: none;
+
+    /*Start without opacity, then transition into opaque as the sidebar comes in*/
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.overlay.show {
+    display: block;
+    opacity: 0.75;
 }
 
 /*Mobile side bar for navigation*/
@@ -109,7 +192,6 @@ body {
     transform: translateX(-100%);
     transition: transform 0.3s ease;
 
-    border: 2px solid red;
 }
 
 /*Bring the sidebar out when active (button clicked)*/
@@ -120,23 +202,19 @@ body {
 /*Close button for mobile sidebar*/
 .close-mobile-nav {
     position: absolute;
-    top: 1rem;
-    right: 1rem;
-    margin-right: 0 1rem 1rem 0;
+    top: 0.5rem;
+    right: 0.5rem;
     background: none;
     border: none;
 
     color: white;
-    font-size: 2rem;
-    font-weight: bold;
+    font-size: 1.5rem;
     line-height: 1;
     padding: 0;
 
     z-index: 20000;
 
     cursor: pointer;
-
-    border: 2px solid yellow
 }
 
 /*Mobile nav links*/
@@ -155,8 +233,8 @@ body {
     padding: 0.75rem 1.5rem;
     text-decoration: none;
     color: white;
-    border: 2px solid white;
 }
+
 
 @media (max-width: 800px) {
     .header-bar {
@@ -166,4 +244,226 @@ body {
     .mobile-header {
         display: flex;
     }
+}
+
+.welcome-title {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    background-color: #500000;
+    color: white;
+    padding-left: 5rem;
+}
+
+.welcome-title h1 {
+    font-family: "Oswald", sans-serif;
+    font-style: normal;
+    color:white;
+    font-weight: 300;
+    padding: 0;
+    margin: 2rem 0 1rem 0;
+}
+
+.welcome-title ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+}
+
+.welcome-title section {
+    flex: 1;
+}
+
+.welcome-title figure {
+    flex: 1;
+    display: flex;
+    align-items: stretch;
+    margin: 0
+}
+
+.welcome-title img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    display: block;
+    margin: 0;
+
+    /*Top-left, Top-right, bottom-right, bototm-left*/
+    /*Top-left is moved 10% of the right*/
+    /*All other coords stay put*/
+    clip-path: polygon(10% 0%, 100% 0%, 100% 100%, 0% 100%);
+}
+
+.PI-overview {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    padding-top: 2rem;
+    
+}
+
+@media (max-width: 800px) {
+    .PI-overview {
+        flex-direction: column;
+    }
+}
+
+.PI-profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.PI-profile h2, h3, p, a {
+    margin: 0;
+}
+
+.PI-overview section {
+    flex: 1;
+}
+
+#PI-PFP {
+    width: 100%;
+}
+
+.research-overview {
+    background-color: #500000;
+    color: white;
+    padding: 1rem 5rem;
+}
+
+.research-overview h2, h3 {
+    color: white;
+}
+
+.research-overview h2 {
+    text-align: center;
+    font-family: "Oswald";
+    font-weight: 300;
+    font-size: 3rem;
+}
+
+#research-overview-general-desc {
+    text-align: center;
+}
+
+.research-overview-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    list-style: none;
+
+    padding: 0 1rem;
+    margin: 0;
+
+    width: 100%vw;
+
+}
+
+@media (max-width: 800px) {
+    .research-overview-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+.research-overview li {
+    border: 2px solid red;
+}
+
+
+.research-overview-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.5rem;
+}
+
+.research-overview-image-wrapper {
+    overflow: hidden;
+    aspect-ratio: 20/9;
+}
+
+.research-overview-image img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.research-overview-image:hover img {
+    cursor: pointer;
+    transform: scale(1.05)
+}
+
+.research-overview-item h3 {
+    font-family: "Oswald";
+    font-weight: 200;
+    font-size: 2rem;
+    border: 2px solid blue;
+    width: 100%;
+    background-color: #3C0000;
+    margin-top: 0;
+
+}
+
+.research-overview-item h3 a {
+    color: white;
+    text-decoration: none;
+}
+
+.research-overview-item h3 a:hover {
+    text-decoration: underline;
+}
+
+.research-overview-item figure {
+    margin: 0;
+    padding: 0rem;
+    width: 75%;
+}
+
+.research-overview-item img {
+    width: 100%;
+}
+
+.overview-read-more {
+    border: 1px solid gray;
+    text-decoration: none;
+    border: 2px solid white;
+    color: white;
+    padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
+    margin-top: auto;
+}
+
+.overview-read-more:hover {
+    background: grey;
+}
+
+.contact {
+    display: flex;
+    flex-direction: row;
+}
+
+@media (max-width: 800px) {
+    .contact {
+        flex-direction: column;
+    }
+}
+
+.contact-info {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.contact-info section {
+    flex: 1;
+}
+
+.contact-map {
+    flex: 1
 }
