--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body {
     padding: 0;
 }
 
-/*Load fonts (TAMU fonts)*/
 @font-face {
     font-family: "Oswald";
     src: url("fonts/Oswald-VariableFont_wght.ttf") format("truetype");
@@ -29,23 +28,19 @@ body {
     font-display: swap;;
 }
 
-/*Default the body font to Open Sans, backup with sans-serif*/
 body {
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
 }
 
-/*Default all headers to maroon (maybe not a good idea?)*/
 h1, h2, h3 {
     color: #500000
 }
 
-/*Site header is the links at the top of the page*/
 .site-header {
     background-color: white;
 }
 
-/*Nav element containing header for desktop*/
 .header-bar {
     display: flex;
     position: relative;
@@ -58,12 +53,11 @@ h1, h2, h3 {
 
 }
 
-/*The nav items are separated into left and right, with a banner in between*/
 .nav-left, .banner, .nav-right {
     flex: 1; /*Makes each take up 1/3 of the width*/
     display: flex; /*Makes inner contents flex*/
     align-items: center;
-    height: 100%; /*Makes the height same as parent (header-bar)*/
+    height: 100%;
 }
 
 .nav-left, .nav-right {
@@ -86,7 +80,6 @@ h1, h2, h3 {
 
 .nav-left li a, .nav-right li a {
     display: flex;
-    /*Center the text in each link box*/
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -121,6 +114,8 @@ h1, h2, h3 {
     height: 100%;
     padding: 0 2rem;
     font-size: 2rem;
+    font-weight: 700;
+
     text-align: center;
     text-decoration: none;
     color: black;
