--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ h1, h2, h3 {
 }
 
 .nav-left li a:hover, .nav-right li a:hover {
-    box-shadow: inset 0 -4px 0 0 #03045E;
+    box-shadow: inset 0 -4px 0 0 #500000;
 }
 
 
@@ -129,7 +129,7 @@ h1, h2, h3 {
     position: relative;
     z-index: 1000; /*Place the button above all else*/
     margin-left: 1rem;
-    background-color: #03045E;
+    background-color: #500000;
     border: 1px solid black;
 
     font-size: 1.3rem;
@@ -182,7 +182,7 @@ h1, h2, h3 {
     height: 100vh;
     z-index: 10000;
 
-    background: #03045E;
+    background: #500000;
 
     display: flex;
     flex-direction: column;
@@ -238,7 +238,7 @@ h1, h2, h3 {
 
 /*Hovering over mobile menu links*/
 .nav-mobile li a:hover {
-    background-color: #B2ECE1;
+    background-color: #3C0000;
 }
 
 
@@ -254,7 +254,7 @@ h1, h2, h3 {
 
 .welcome-title {
     display: flex;
-    background-color: #03045E;
+    background-color: #500000;;
     color: white;
     padding-left: 5rem;
     min-height: 30vh;
@@ -270,6 +270,11 @@ h1, h2, h3 {
     font-weight: 900;
     padding: 0;
     margin: 2rem 0 1rem 0;
+}
+
+.welcome-title p {
+    font-size: 1.3rem;
+    font-weight: 400;
 }
 
 .welcome-title ul {
@@ -586,4 +591,103 @@ h1, h2, h3 {
     background-color: #3C0000;
     color: white;
     z-index: 1000;
+}
+
+
+/*Generic Side Navigation*/
+.generic-nav {
+    flex: 1;
+
+    border-right: 2px dashed #500000;
+
+    /*Makes it so the sidebar doesn't scale based on members-main-content*/
+    align-self: flex-start;
+
+    /*Makes the sidebar stick when scrolling*/
+    position: sticky;
+    top: 1rem;
+
+    margin-top: 1rem;
+}
+
+.generic-nav h2, ul {
+    padding: 0rem 2rem;
+}
+
+.generic-nav h3 {
+    padding: 0rem 2rem;
+    color: #500000;
+}
+
+.generic-nav ul {
+    list-style-type: none;
+}
+
+.generic-nav li {
+    padding: 0.5rem 0rem;
+}
+
+.generic-nav a {
+    text-decoration: none;
+    color: #500000
+}
+
+.generic-nav a:hover {
+    text-decoration: underline;
+    color: #500000;
+}
+
+@media (max-width: 800px) {
+    .generic-nav {
+        display: none;
+    }
+}
+
+#generic-page-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: white;
+    background: #500000;
+
+}
+
+#generic-page-title h1 {
+    font-size: 3rem;
+    font-family: "Oswald";
+    font-weight: 400;
+    text-align: center;
+    color: white;
+}
+
+
+.generic-main-content {
+    flex: 5;
+
+    padding: 2rem;
+
+    display: flex;
+    flex-direction:column;
+
+}
+
+/*Generic note element for development*/
+.note {
+    background-color: #D1D1D1;
+    color: #500000;
+
+    font-family: "Work Sans";
+    font-weight: 400;
+
+    padding: 1rem;
+    border: 2px solid black;
+    border-radius: 8px;
+
+    margin: 1rem;
+}
+
+.note::before {
+    content: "NOTE: ";
+    font-weight: bold;;
 }
