Removed video from index, replaced with generic stick figure

--- a/styles.css
+++ b/styles.css
@@ -424,7 +424,7 @@ h1, h2, h3 {
     text-align: center;
 }
 
-.PI-video video {
+.PI-video img {
     object-fit: cover;
     display: block;
     height: 75%;
