--- a/css/members.css
+++ b/css/members.css
@@ -58,6 +58,13 @@ a {
     padding-bottom: 0.5rem;
 }
 
+@media (max-width: 800px) {
+    .member-container {
+        flex-direction: column;
+        gap: 1rem;
+    }
+}
+
 .figure-and-links {
     display: flex;
     flex-direction: column;
